tests/ui/suggestions/issue-88696.stderr
error[E0277]: the trait bound `Result<u32, i32>: From<Result<u64, i32>>` is not satisfied
  --> $DIR/issue-88696.rs:9:9
   |
LL |     a().into()
   |         ^^^^ the trait `From<Result<u64, i32>>` is not implemented for `Result<u32, i32>`
   |
   = note: required for `Result<u64, i32>` to implement `Into<Result<u32, i32>>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
